# CiA402Device-example_Archived

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
main/: errorcheck.cpp  netcollision.cpp  object_dictionary.cpp  ports.cpp  position.cpp  prueba.cpp  start.cpp  startup.cpp  status.cpp  stop.cpp  torque.cpp  velocity.cpp
script/: bootstrap  pushall
